--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+
+/* GLOBAL VARIABLES*/
+
 body {
   font-family: Arial;
   margin: 0;
@@ -17,17 +20,29 @@ body {
   margin: 5px;
 }
 
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
-}
 img {
-  width: 30%;
+  width: 40%;
+}
+/* MAIN BODY */
+
+.site-title {
+  background: url("img/header.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  height: 85vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.titulo {
-  text-align: center;
+.site-background {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 15%;
+  background-color: red;
 }
 
 .row {
