--- a/style.css
+++ b/style.css
@@ -8,22 +8,77 @@
 
 :root {
   --Noto: "Noto";
+  --Montserrat: "Montserrat";
 }
 
 body {
   font-family: Arial;
   margin: 0;
 }
-.navbar {
+
+.nav {
   background-color: peru;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  overflow: hidden;
+  transition: height 1s ease-in-out;
 }
 
-.navbar > a {
-  width: 100px;
-  margin: 5px;
+.nav .nav-menu {
+  justify-content: space-between;
+}
+
+.nav .toggle-collapse {
+  position: absolute;
+  top: 0%;
+  width: 90%;
+  cursor: pointer;
+  display: none;
+}
+
+.nav .toggle-collapse .toggle-icons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.collapse {
+  height: 30rem;
+}
+
+.nav .nav-items {
+  display: flex;
+  margin: 0%;
+}
+
+.nav .nav-items .item {
+  position: relative;
+  font-family: var(--Montserrat);
+}
+
+.nav .nav-items .item:hover {
+  background-color: orangered;
+}
+
+blockquote {
+  quotes: "«" "»";
+}
+
+blockquote:before {
+  content: open-quote;
+}
+
+blockquote:after {
+  content: close-quote;
+}
+
+.nav .imagen {
+  border-radius: 200px;
+  width: 80px;
+  height: 80px;
+}
+
+.nav .social {
+  padding: 1.4rem 0;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -68,9 +123,17 @@ img {
   background: #ddd;
 }
 
-@media screen and (max-width: 700px) {
-  .row,
-  .navbar {
+@media only screen and (max-width: 700px) {
+  .nav .nav-menu,
+  .nav .nav-items {
+    flex-direction: column;
+  }
+
+  .nav .toggle-collapse {
+    display: initial;
+  }
+
+  .row {
     flex-direction: column;
   }
 }
